MDEV-32223 Memory leak showed in MDEV-6146 test suite

Fix propagate_equal_fields to avoid removing Item_direct_ref_to_item from the Item tree and so reallocating it.

Fix Item_func_match to avoid removing Item_direct_ref_to_item from item tree via real_item() call.